fix: fix icon errors following html validation

--- a/enquiry.html
+++ b/enquiry.html
@@ -17,7 +17,7 @@
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
             </div>
             <div class="col-12 col-lg-4 bg-color">
@@ -70,13 +70,13 @@
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
 
                     <label for="fname">First Name</label>
-                    <input id="fname" class="text-input" type="text" name="first_name" required />
+                    <input id="fname" class="text-input" type="text" name="first_name" required>
 
                     <label for="lname">Last Name</label>
-                    <input id="lname" class="text-input" type="text"  name="last_name" required />
+                    <input id="lname" class="text-input" type="text"  name="last_name" required>
 
                     <label for="email">Email Address</label>
-                    <input id="email" class="text-input" type="email" name="email_address" required/>
+                    <input id="email" class="text-input" type="email" name="email_address" required>
 
                     <label for="holiday-type">Holiday type</label>
                     <select id="holiday-type" name="holiday_type">
@@ -99,7 +99,7 @@
                     </select>
 
                     <label for="budget">Budget</label>
-                    <input id="budget" type="range" name="abudget" min="£0" max="£5000">
+                    <input id="budget" type="range" name="abudget" min="0" max="5000">
 
                     <label for="textarea">Additional Info</label>
                     <textarea id="textarea" name="textarea" placeholder="Let us know any preferences regarding accomodation and travel."></textarea>
@@ -117,26 +117,26 @@
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"area-hidden="true"></i> Download Brochure </a></p>
+                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
             <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
-                <p><a href="#"><i class="fa-solid fa-file-signature" area-hidden="true"></i> Terms & Conditions </a></p>
+                <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4 footer-common">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook" area-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram" area-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter" area-hidden="true"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" area-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
