--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
             </div>
             <div class="col-12 col-lg-4 bg-color">
