--- a/destinations.html
+++ b/destinations.html
@@ -17,7 +17,7 @@
 
           </a>
           <div class="col-lg-3 d-none d-lg-block bg-color">
-             <p class="tel_no"> Call us:    <a href="tel: 555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume" area-hidden="true"></i> </a></p>
+             <p class="tel_no"> Call us: <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
           </div>
           <div class="col-12 col-lg-4 bg-color">
@@ -286,26 +286,26 @@
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"area-hidden="true"></i> Download Brochure </a></p>
+                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
             <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
-                <p><a href="#"><i class="fa-solid fa-file-signature" area-hidden="true"></i> Terms & Conditions </a></p>
+                <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4 footer-common">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook" area-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram" area-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter" area-hidden="true"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" area-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
