docs: README updated, some tests carried out

--- a/destinations.html
+++ b/destinations.html
@@ -61,27 +61,26 @@
             <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/peru.jpg" alt="">
                 <p class="type-caption">Bucketlist Holidays</p>
-                <a href="#bucketlist-destinations"><button type="button" class="btn-see-deals">See Deals</button></a>
+                <a href="#bucketlist-destinations" class="btn-see-deals">See Deals</a>
+
             </div> 
+
             <div class="col-12 col-sm-6 col-md-4 deal-type-container center">
                 <img src="assets/images/newyork.jpg" alt="">
                 <p class="type-caption">Multicity Holidays</p>
-                <a href="#multi-destination-deals"><button type="button" class="btn-see-deals">See Deals</button></a>
-
-
+                <a href="#multi-destination-deals" class="btn-see-deals">See Deals</a>
             </div>
+
             <div class="col-12 col-md-4 deal-type-container center">
                 <img src="assets/images/beach_holidays.jpg" alt="">
                 <p class="type-caption">Beach Holidays</p>
-                <a href="#beach-holidays"><button type="button" class="btn-see-deals">See Deals</button></a>
-
+                <a href="#beach-holidays" class="btn-see-deals">See Deals</a>
 
             </div>
 
         </div>
 
     </section>
-
     <hr>
 
     <section class="container-fluid" id="multi-destination-deals">
