fix/docs: fixing issues arose during test and update README.md

--- a/destinations.html
+++ b/destinations.html
@@ -18,7 +18,7 @@
 
           </a>
           <div class="col-lg-3 d-none d-lg-block bg-color">
-             <p class="tel_no"> Call us: <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
+             <p class="tel_no"> Call us: <a href="tel:+555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
           </div>
           <div class="col-12 col-lg-4 bg-color">
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header">Holiday Types</p>
+                <p class="main-headers">Holiday Types</p>
             </div>
         </div>
 
@@ -87,13 +87,13 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header"><i class="fa-solid fa-city"></i>Multi Destination Deals</p>
+                <p class="main-headers"><i class="fa-solid fa-city"></i>Multi Destination Deals</p>
             </div>
         </div>
 
         <div class="row section-container center">
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -110,7 +110,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -127,7 +127,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -154,13 +154,13 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header"><i class="fa-solid fa-list-check"></i>Bucketlist Destinations</p>
+                <p class="main-headers"><i class="fa-solid fa-list-check"></i>Bucketlist Destinations</p>
             </div>
         </div>
 
         <div class="row section-container center">
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -168,7 +168,7 @@
                         <img src="assets/images/peru.jpg" alt="Image of Machu Picchu">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Majestic Machu Picchu & Galápagos Islands</h1>
+                        <h1>Machu Picchu & Galápagos Islands</h1>
                         <p>Peru & Ecuador</p>
                         <p>deals from £1499</p>
                       </div>
@@ -177,7 +177,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -185,7 +185,7 @@
                         <img src="assets/images/seychelles.jpg" alt="Image of Seychelles">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Safari in the Serengeti & Beach Bliss in the Seychelles</h1>
+                        <h1>Beach Bliss in the Seychelles</h1>
                         <p>Seychelles</p>
                         <p>deals from £1299</p>
                       </div>
@@ -194,7 +194,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -202,7 +202,7 @@
                         <img src="assets/images/australia.jpg" alt="Image of Sydney">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Iconic Australian Outback & Great Barrier Reef</h1>
+                        <h1>Australian & Great Barrier Reef</h1>
                         <p>Australia</p>
                         <p>deals from £1999</p>
                       </div>
@@ -221,13 +221,13 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="destinations-header"><i class="fa-solid fa-umbrella-beach"></i>Beach Holidays</p>
+                <p class="main-headers"><i class="fa-solid fa-umbrella-beach"></i>Beach Holidays</p>
             </div>
         </div>
 
         <div class="row section-container center">
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -244,7 +244,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -252,7 +252,7 @@
                         <img src="assets/images/barbados.jpg" alt="Image of Barbados">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Caribbean Delight in Barbados</h1>
+                        <h1>Barbados</h1>
                         <p>From lively beach bars to tranquil coves, Barbados has something for every beach lover.</p>
                         <p>deals from £1799</p>
                       </div>
@@ -261,7 +261,7 @@
  
             </div> 
 
-            <div class="col-12 col-md-4 multi-type-container center">
+            <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -269,7 +269,7 @@
                         <img src="assets/images/maldives.jpg" alt="Image of Maldives">
                       </div>
                       <div class="flip-card-back">
-                        <h1>Tropical Bliss in the Maldives</h1>
+                        <h1>Maldives</h1>
                         <p>Ultimate luxury beach escape in the Maldives with pristine white sands and turquoise lagoons. </p>
                         <p>deals from £2199</p>
                       </div>
@@ -282,7 +282,7 @@
 
     </section>
 
-    <footer class="container-fluid bg-color">
+    <footer class="container-fluid bg-color md-footer-d">
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
