--- a/landing.html
+++ b/landing.html
@@ -18,7 +18,7 @@
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel:+555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
             </div>
             <div class="col-12 col-lg-4 bg-color">
@@ -76,7 +76,7 @@
 
     </section>
 
-    <footer class="container-fluid bg-color">
+    <footer class="container-fluid bg-color md-footer-d">
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
