--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             </a>
             <div class="col-lg-3 d-none d-lg-block bg-color">
-               <p class="tel_no"> Call us:    <a href="tel:555-333-2346">555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
+               <p class="tel_no"> Call us:    <a href="tel:+555-333-2346"> 555-333-2346 <i class="fa-solid fa-phone-volume"></i> </a></p>
 
             </div>
             <div class="col-12 col-lg-4 bg-color">
@@ -160,7 +160,7 @@
 
     </section>
 
-    <footer class="container-fluid bg-color">
+    <footer class="container-fluid bg-color md-footer-d">
         <div class="row">
 
             <div class="col-md-4 d-none d-md-block footer-common">
@@ -192,15 +192,9 @@
 
     </footer>
     
-
-
     <script src="https://kit.fontawesome.com/353f52eb70.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.js" integrity="sha512-nO7wgHUoWPYGCNriyGzcFwPSF+bPDOR+NvtOYy2wMcWkrnCNPKBcFEkU80XIN14UVja0Gdnff9EmydyLlOL7mQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>    
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script> -->
-
 </body>
 
 </html>
