fix/feat: add pattern to form, fix overlapping bg color on destination.html

--- a/destinations.html
+++ b/destinations.html
@@ -93,6 +93,8 @@
 
         <div class="row section-container center">
 
+          <!-- FlipCard code is used from https://www.w3schools.com/howto/howto_css_flip_card.asp , altered to suit needs of the webpage-->
+
             <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
@@ -159,6 +161,9 @@
         </div>
 
         <div class="row section-container center">
+
+        <!-- FlipCard code is used from https://www.w3schools.com/howto/howto_css_flip_card.asp , altered to suit needs of the webpage-->
+
 
             <div class="col-12 col-lg-4 multi-type-container center">
 
@@ -227,6 +232,7 @@
 
         <div class="row section-container center">
 
+         <!-- FlipCard code is used from https://www.w3schools.com/howto/howto_css_flip_card.asp , altered to suit needs of the webpage-->
             <div class="col-12 col-lg-4 multi-type-container center">
 
                 <div class="flip-card">
@@ -283,36 +289,36 @@
     </section>
 
     <footer class="container-fluid bg-color md-footer-d">
-        <div class="row">
+      <div class="row">
 
-            <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
-            </div>
+          <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
+              <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
+          </div>
 
-            <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
-                <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
-            </div>
+          <div class="col-md-4 d-none d-md-block footer-common">
+              <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
+          </div>
 
-            <div class="col-12 col-sm-6 col-md-4 footer-common">
-                <ul class="list-inline">
-                    <li class="list-inline-item">
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-                    </li>
-                </ul>
-            </div>
+          <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
+              <ul class="list-inline">
+                  <li class="list-inline-item">
+                      <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                      <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                  </li>
+              </ul>
+          </div>
 
-        </div>
+      </div>
 
-    </footer>
+  </footer>
 
     <script src="https://kit.fontawesome.com/353f52eb70.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.js" integrity="sha512-nO7wgHUoWPYGCNriyGzcFwPSF+bPDOR+NvtOYy2wMcWkrnCNPKBcFEkU80XIN14UVja0Gdnff9EmydyLlOL7mQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
