--- a/enquiry.html
+++ b/enquiry.html
@@ -71,10 +71,10 @@
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
 
                     <label for="fname">First Name</label>
-                    <input id="fname" class="text-input" type="text" name="first_name" required>
+                    <input id="fname" class="text-input" type="text" name="first_name" pattern="[A-Za-z]" title="Type your first name here"required>
 
                     <label for="lname">Last Name</label>
-                    <input id="lname" class="text-input" type="text"  name="last_name" required>
+                    <input id="lname" class="text-input" type="text"  name="last_name" pattern="[A-Za-z]" title="Type your last name here"required>
 
                     <label for="email">Email Address</label>
                     <input id="email" class="text-input" type="email" name="email_address" required>
@@ -117,15 +117,15 @@
     <footer class="container-fluid bg-color md-footer-d">
         <div class="row">
 
-            <div class="col-md-4 d-none d-md-block footer-common">
+            <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
                 <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
-            <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
+            <div class="col-md-4 d-none d-md-block footer-common">
                 <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
-            <div class="col-12 col-sm-6 col-md-4 footer-common">
+            <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
                 <ul class="list-inline">
                     <li class="list-inline-item">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
