--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             </div>
         </div>
 
+
+        <!-- Carousel code is copied from https://getbootstrap.com/docs/4.6/components/alerts/ , altered to suit needs of the webpage-->
         <div class="row">
             <div class="col-12">
                 
@@ -163,15 +165,15 @@
     <footer class="container-fluid bg-color md-footer-d">
         <div class="row">
 
-            <div class="col-md-4 d-none d-md-block footer-common">
+            <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
                 <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
-            <div class="col-sm-6 col-md-4 d-none d-sm-block d-md-block footer-common">
+            <div class="col-md-4 d-none d-md-block footer-common">
                 <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
-            <div class="col-12 col-sm-6 col-md-4 footer-common">
+            <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
                 <ul class="list-inline">
                     <li class="list-inline-item">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -183,7 +185,7 @@
                         <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
