fix:fix form issue appeared after deployment

--- a/enquiry.html
+++ b/enquiry.html
@@ -71,10 +71,10 @@
                     <h2> <i class="fa-solid fa-file-signature"></i> Enquiry Form </h2>
 
                     <label for="fname">First Name</label>
-                    <input id="fname" class="text-input" type="text" name="first_name" pattern="[A-Za-z]" title="Type your first name here"required>
+                    <input id="fname" class="text-input" type="text" name="first_name" pattern="[A-Za-z\s]+" title="Type your first name here" required>
 
                     <label for="lname">Last Name</label>
-                    <input id="lname" class="text-input" type="text"  name="last_name" pattern="[A-Za-z]" title="Type your last name here"required>
+                    <input id="lname" class="text-input" type="text"  name="last_name" pattern="[A-Za-z\s]+" title="Type your last name here" required>
 
                     <label for="email">Email Address</label>
                     <input id="email" class="text-input" type="email" name="email_address" required>
