Fix/docs: README.md update and accesibility improvments

--- a/destinations.html
+++ b/destinations.html
@@ -292,7 +292,7 @@
       <div class="row">
 
           <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
-              <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
+              <p><a href="assets/Get2Go_Holidays_Brocurre.docx"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
           </div>
 
           <div class="col-md-4 d-none d-md-block footer-common">
@@ -302,16 +302,16 @@
           <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
               <ul class="list-inline">
                   <li class="list-inline-item">
-                      <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                      <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our facebook page."><i class="fa-brands fa-facebook"></i></a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram profile."><i class="fa-brands fa-instagram"></i></a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                      <a href="https://twitter.com/" target="_blank" aria-label="Visit us on Twitter."><i class="fa-brands fa-twitter"></i></a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                      <a href="mailto:info@get2goholidays.co.uk" target="_blank" aria-label="Send us an e-mail"><i class="fa-regular fa-envelope"></i></a>
                   </li>
               </ul>
           </div>
