--- a/landing.html
+++ b/landing.html
@@ -80,7 +80,7 @@
         <div class="row">
 
             <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
+                <p><a href="assets/Get2Go_Holidays_Brocurre.docx"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
             <div class="col-md-4 d-none d-md-block footer-common">
@@ -90,16 +90,16 @@
             <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our facebook page."><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram profile."><i class="fa-brands fa-instagram"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://twitter.com/" target="_blank" aria-label="Visit us on Twitter."><i class="fa-brands fa-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                        <a href="mailto:info@get2goholidays.co.uk" target="_blank" aria-label="Send us an e-mail"><i class="fa-regular fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
@@ -112,7 +112,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.js" integrity="sha512-nO7wgHUoWPYGCNriyGzcFwPSF+bPDOR+NvtOYy2wMcWkrnCNPKBcFEkU80XIN14UVja0Gdnff9EmydyLlOL7mQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>    
 
-    
 </body>
 
 </html>
