--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                           <a class="nav-link" href="enquiry.html">CONTACT</a>
                         </li>
                         <li class="nav-item" id="Dbrochure">
-                          <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx" target="_blank">DOWNLOAD BROCHURE</a>
+                          <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx">DOWNLOAD BROCHURE</a>
                         </li>
                       </ul>
                     </div>
@@ -170,7 +170,7 @@
             </div>
 
             <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="#"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
+                <p><a href="assets/Terms and Conditions.docx"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
