--- a/destinations.html
+++ b/destinations.html
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="main-headers">Holiday Types</p>
+                <p id="top-of-page" class="main-headers">Holiday Types</p>
             </div>
         </div>
 
@@ -143,6 +143,7 @@
                       </div>
                     </div>
                 </div>
+                <a href="#top-of-page" class="btn-back"><i class="fa-solid fa-arrow-up"></i></a>
  
             </div> 
 
@@ -213,7 +214,8 @@
                       </div>
                     </div>
                 </div>
- 
+                <a href="#top-of-page" class="btn-back"><i class="fa-solid fa-arrow-up"></i></a>
+
             </div> 
 
         </div>
@@ -281,6 +283,7 @@
                       </div>
                     </div>
                 </div>
+                <a href="#top-of-page" class="btn-back"><i class="fa-solid fa-arrow-up"></i></a>
  
             </div> 
 
