--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                         The accommodations were superb, the activities were fantastic, and the overall experience was truly unforgettable. Thank you, Get2Go Holidays,
                          for an incredible holiday!"</p>
                 </div>
+                <a href="#top-of-page" class="btn-back"><i class="fa-solid fa-arrow-up"></i></a>
+
             </div>
         </div>
 
@@ -137,27 +139,30 @@
             </div>
         </div>
         <div class="row why-book-with-us">
-            <div class="col-12 col-sm-6 col-sm-3 center">
-                <div class="valueitem">
-                    <p><i class="fa-solid fa-sack-dollar"></i>Flexible Payment Options</p>
+
+                <div class="col-12 col-sm-6 col-sm-3 center">
+                    <div class="valueitem">
+                        <p><i class="fa-solid fa-sack-dollar"></i>Flexible Payment Options</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-sm-6 col-sm-3 center">
-                <div class="valueitem">
-                    <p><i class="fa-solid fa-shield"></i>Fully Protected Holidays</p>
+                <div class="col-12 col-sm-6 col-sm-3 center">
+                    <div class="valueitem">
+                        <p><i class="fa-solid fa-shield"></i>Fully Protected Holidays</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-sm-6 col-sm-3 center">
-                <div class="valueitem">
-                    <p><i class="fa-solid fa-phone"></i>24/7 Customer Service</p>
+                <div class="col-12 col-sm-6 col-sm-3 center">
+                    <div class="valueitem">
+                        <p><i class="fa-solid fa-phone"></i>24/7 Customer Service</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-sm-6 col-sm-3 center">
-                <div class="valueitem">
-                    <p><i class="fa-solid fa-piggy-bank"></i>Best Value Deals</p>
+                <div class="col-12 col-sm-6 col-sm-3 center">
+                    <div class="valueitem">
+                        <p><i class="fa-solid fa-piggy-bank"></i>Best Value Deals</p>
+                    </div>
+                    <a href="#top-of-page" class="btn-back"><i class="fa-solid fa-arrow-up"></i></a>
+
                 </div>
-            </div>
-       
+            
         </div>
 
     </section>
