feat: navigation arrow added/fixed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div class="col-12">
-                <h2 class="main-headers">Latest Deals</h2>
+                <h2 id="top-of-page" class="main-headers">Latest Deals</h2>
             </div>
         </div>
 
