feat/fix: update image names

--- a/landing.html
+++ b/landing.html
@@ -37,7 +37,7 @@
                           <a class="nav-link" href="enquiry.html">CONTACT</a>
                         </li>
                         <li class="nav-item" id="Dbrochure">
-                          <a class="nav-link" href="assets/Get2Go_Holidays_Brocurre.docx">DOWNLOAD BROCHURE</a>
+                          <a class="nav-link" href="assets/get2go_holidays_brocurre.docx">DOWNLOAD BROCHURE</a>
                         </li>
                       </ul>
                     </div>
@@ -80,11 +80,11 @@
         <div class="row">
 
             <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
-                <p><a href="assets/Get2Go_Holidays_Brocurre.docx"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
+                <p><a href="assets/get2go_holidays_brocurre.docx"><i class="fa-solid fa-download"></i> Download Brochure </a></p>
             </div>
 
             <div class="col-md-4 d-none d-md-block footer-common">
-                <p><a href="assets/Terms and Conditions.docx"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
+                <p><a href="assets/terms_and_conditions.docx"><i class="fa-solid fa-file-signature"></i> Terms & Conditions </a></p>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4 footer-common md-footer-d">
