docs: update README

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             </div>
             <div class="col-12 col-lg-4 bg-color">
-                
+                <!--Original code is used from bootstrap and edited to suit own needs-->
                 <nav class="navbar navbar-expand navbar-style">
                    
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
